<resources>

    <string name="app_name">Rick and Morty Characters</string>

    //Titles
    <string name="title_characters">Characters</string>
    <string name="title_favourite">Favorites</string>

    //Errors
    <string name="timeout_code">timeout</string>
    <string name="resolve_code">Unable to resolve host</string>
    <string name="no_internet_message">No internet connection</string>
    <string name="unauthorized_code">401</string>
    <string name="unknown_message">Unknown error. Please try again later</string>
    <string name="no_found_code">404</string>
    <string name="no_found_message">No characters found</string>

    //Favourites
    <string name="favourites_empty_title">You have no favorites yet</string>
    <string name="favourites_empty_description">You can add favorite character from detail screen. Easily by clicking on star on the top bar.</string>

    //Detail Activity
    <string name="title_name">Name</string>
    <string name="title_search">Search</string>
    <string name="title_status">Status</string>
    <string name="title_species">Species</string>
    <string name="title_type">Type</string>
    <string name="title_gender">Gender</string>
    <string name="title_origin">Origin</string>
    <string name="title_location">Location</string>
    <string name="title_detail_favourite">Favourite</string>

    //Arguments
    <string name="argument_id">id</string>

</resources>